--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,16 +1,35 @@
+
+@font-face {
+  font-family: 'Neutra';
+  src: url('../fonts/neutra-text-font/NeutraText-Bold.otf') format('opentype');
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: 'Neutra';
+  src: url('../fonts/neutra-text-font/NeutraText-Book.otf') format('opentype');
+  font-weight: normal;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
 
-  body {
-    @apply h-full ;
+@layer base {
+  * {
+    font-family: 'Neutra', sans-serif;
   }
+  
+  body {
+    @apply h-full;
+  }
+  
   .main {
     @apply min-h-screen w-full bg-white flex justify-center items-center;
   }
 }
+
 @layer components {
   @import "components/button";
   @import "components/breadcrumbs";
